fixed xfinity slideshow image  issue. Images were not taking up 100% of container causing an overflow effect

--- a/src/styles/components/whatsHappeningPages/_supra.scss
+++ b/src/styles/components/whatsHappeningPages/_supra.scss
@@ -5,7 +5,8 @@ $margin3: 3rem;
   background: white;
   position:absolute;
   top: 0;
-  width: 100vw;
+  left: 0;
+  // width: 100vw;
   z-index:3;
   padding-top: 3rem;
  
