--- a/src/styles/components/whatsHappeningPages/_xfinity.scss
+++ b/src/styles/components/whatsHappeningPages/_xfinity.scss
@@ -61,13 +61,15 @@
 
     &--contain{
       position:relative;
-      transition: .3s;
+      // transition: .3s;
+      height: 100%;
+      // overflow:hidden;
 
-      &:hover{
-        -webkit-transform: scale(1.1);
-        transform: scale(1.1);
-        transition: .3s;
-      }
+      // &:hover{
+      //   -webkit-transform: scale(1.1);
+      //   transform: scale(1.1);
+      //   transition: .3s;
+      // }
        
       &-youtubePlayButton{
         position:absolute;
@@ -93,7 +95,17 @@
     }
     &--img{
       width: 100%;
+      height: 100%;
+      max-height: 100%;
       transition: .3s;
+
+
+      &:hover{
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+        transition: .3s;
+
+      }
     }
   }
 
